# hw-conversion

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/hw_conversion/: HWPreprocessor.py  __init__.py  cli.py
