[metadata]
name = hw-conversion-jmbarrios
version = 0.0.1
author = Juan M. Barrios
author_email = j.m.barrios@gmail.com
description = Small script to generate a python script from a Jupyter Notebobok
long_description = file: README.md

[options]
    install_requires = 
        ipython
        nbconvert
    package_dir=
        =src
    packages=find:

[options.packages.find]
    where=src

[options.entry_points]
console_scripts = 
    hwconvert = hw_conversion.cli:main
