[metadata]
name = hw-conversion-jmbarrios
version = 0.0.1
author = Juan M. Barrios
author_email = j.m.barrios@gmail.com
license = MIT
license_file = LICENSE
description = Small script to generate a python script from a Jupyter Notebobok
long_description = file: README.md

[options]
    packages=
        hw_conversion
    install_requires = 
        ipython>7
        nbconvert>=5
        Pygments>2.4.1
    package_dir=
        =src

[options.entry_points]
console_scripts = 
    hwconvert = hw_conversion.cli:main

[options.extras_require]
testing =
    pytest>=6.0
